--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8443
+server.ssl.key-alias=server
+server.ssl.key-password=password
+server.ssl.key-store-password=password
+server.ssl.key-store=classpath:server.p12
+server.ssl.key-store-type=PKCS12
+security.require-ssl=true
