2 way ssl between server and client enabled
Change-Id: I5704c21709ca912a1649c7f6d90ee17a2b750acc
Signed-off-by: Sameer Sarmah <sameerparansarmah@gmail.com>

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,4 +4,9 @@ server.ssl.key-password=password
 server.ssl.key-store-password=password
 server.ssl.key-store=classpath:server.p12
 server.ssl.key-store-type=PKCS12
+server.ss.client-auth=want
 security.require-ssl=true
+#trust store location
+trust.store=classpath:server.p12
+#trust store password
+trust.store.password=password
