--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 server.ssl.key-alias=client
 server.ssl.key-password=password
 server.ssl.key-store-password=password
@@ -10,3 +10,5 @@ trust.store=classpath:client.p12
 trust.store.password=password
 key-store-file=client.p12
 download.service.url=https://localhost:8443/downloadexcel
+server.ssl.enabled=false
+security.require-ssl=false
