--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,4 @@ security.require-ssl=true
 trust.store=classpath:server.p12
 #trust store password
 trust.store.password=password
+server.ssl.enabled=true
