two way SSL authentication
Change-Id: I02fea8ec693b8727e51c3b221018c3fc677b1e21
Signed-off-by: Sameer Sarmah <sameerparansarmah@gmail.com>

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -4,11 +4,12 @@ server.ssl.key-password=password
 server.ssl.key-store-password=password
 server.ssl.key-store=classpath:client.p12
 server.ssl.key-store-type=PKCS12
-#trust store location
-trust.store=classpath:client.p12
-#trust store password
-trust.store.password=password
+
+server.ssl.trust-store-type=JKS
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=password
 key-store-file=client.p12
 download.service.url=https://localhost:8443/downloadexcel
 server.ssl.enabled=false
 security.require-ssl=false
+#server.ssl.client-auth=need
