--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,10 +4,11 @@ server.ssl.key-password=password
 server.ssl.key-store-password=password
 server.ssl.key-store=classpath:server.p12
 server.ssl.key-store-type=PKCS12
-server.ss.client-auth=want
 security.require-ssl=true
-#trust store location
-trust.store=classpath:server.p12
-#trust store password
-trust.store.password=password
+server.ssl.trust-store-type=JKS
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=password
+server.ssl.trust-store-type=JKS
 server.ssl.enabled=true
+server.ssl.client-auth=need
+logging.level.org.springframework.security=DEBUG
